recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:24: error: not found: value lentgh
    recule(lentgh);
           ^